Use getDeclaredConstructor method to fix deprecated warnings with Java9+.