@@ -61,7 +61,7 @@ public class ChannelForwardedTCPIP extends Channel{
       if(config instanceof ConfigDaemon){
         ConfigDaemon _config = (ConfigDaemon)config;
         Class<?> c=Class.forName(_config.target);
-        daemon=(ForwardedTCPIPDaemon)c.newInstance();
+        daemon=(ForwardedTCPIPDaemon)c.getDeclaredConstructor().newInstance();
 
         PipedOutputStream out=new PipedOutputStream();
         io.setInputStream(new PassiveInputStream(out
