@@ -144,14 +144,14 @@ public abstract class KeyExchange{
     }
 
     Class<?> _s2cclazz=Class.forName(session.getConfig(guess[PROPOSAL_ENC_ALGS_STOC]));
-    Cipher _s2ccipher=(Cipher)(_s2cclazz.newInstance());
+    Cipher _s2ccipher=(Cipher)(_s2cclazz.getDeclaredConstructor().newInstance());
     boolean _s2cAEAD=_s2ccipher.isAEAD();
     if(_s2cAEAD){
       guess[PROPOSAL_MAC_ALGS_STOC]=null;
     }
 
     Class<?> _c2sclazz=Class.forName(session.getConfig(guess[PROPOSAL_ENC_ALGS_CTOS]));
-    Cipher _c2scipher=(Cipher)(_c2sclazz.newInstance());
+    Cipher _c2scipher=(Cipher)(_c2sclazz.getDeclaredConstructor().newInstance());
     boolean _c2sAEAD=_c2scipher.isAEAD();
     if(_c2sAEAD){
       guess[PROPOSAL_MAC_ALGS_CTOS]=null;
@@ -182,7 +182,7 @@ public abstract class KeyExchange{
     try{
       String _c=session.getConfig("FingerprintHash").toLowerCase();
       Class<?> c=Class.forName(session.getConfig(_c));
-      hash=(HASH)(c.newInstance());
+      hash=(HASH)(c.getDeclaredConstructor().newInstance());
     }
     catch(Exception e){ System.err.println("getFingerPrint: "+e); }
     return Util.getFingerPrint(hash, getHostKey(), true, false);
@@ -238,7 +238,7 @@ public abstract class KeyExchange{
       String foo=Util.byte2str(buf.getString());
       try{
         Class<?> c=Class.forName(session.getConfig(foo));
-        sig=(SignatureRSA)(c.newInstance());
+        sig=(SignatureRSA)(c.getDeclaredConstructor().newInstance());
         sig.init();
       }
       catch(Exception e){
@@ -283,7 +283,7 @@ public abstract class KeyExchange{
       SignatureDSA sig=null;
       try{
         Class<?> c=Class.forName(session.getConfig("signature.dss"));
-        sig=(SignatureDSA)(c.newInstance());
+        sig=(SignatureDSA)(c.getDeclaredConstructor().newInstance());
         sig.init();
       }
       catch(Exception e){
@@ -325,7 +325,7 @@ public abstract class KeyExchange{
       SignatureECDSA sig=null;
       try{
         Class<?> c=Class.forName(session.getConfig(alg));
-        sig=(SignatureECDSA)(c.newInstance());
+        sig=(SignatureECDSA)(c.getDeclaredConstructor().newInstance());
         sig.init();
       }
       catch(Exception e){
@@ -358,7 +358,7 @@ public abstract class KeyExchange{
       SignatureEdDSA sig=null;
       try{
         Class<?> c=Class.forName(session.getConfig(alg));
-        sig=(SignatureEdDSA)(c.newInstance());
+        sig=(SignatureEdDSA)(c.getDeclaredConstructor().newInstance());
         sig.init();
       }
       catch(Exception e){
