@@ -63,7 +63,7 @@ public class KeyPairDSA extends KeyPair{
     this.key_size=key_size;
     try{
       Class<?> c=Class.forName(JSch.getConfig("keypairgen.dsa"));
-      KeyPairGenDSA keypairgen=(KeyPairGenDSA)(c.newInstance());
+      KeyPairGenDSA keypairgen=(KeyPairGenDSA)(c.getDeclaredConstructor().newInstance());
       keypairgen.init(key_size);
       P_array=keypairgen.getP();
       Q_array=keypairgen.getQ();
@@ -273,7 +273,7 @@ public class KeyPairDSA extends KeyPair{
   public byte[] getSignature(byte[] data){
     try{
       Class<?> c=Class.forName(JSch.getConfig("signature.dss"));
-      SignatureDSA dsa=(SignatureDSA)(c.newInstance());
+      SignatureDSA dsa=(SignatureDSA)(c.getDeclaredConstructor().newInstance());
       dsa.init();
       dsa.setPrvKey(prv_array, P_array, Q_array, G_array);
 
@@ -297,7 +297,7 @@ public class KeyPairDSA extends KeyPair{
   public Signature getVerifier(){
     try{
       Class<?> c=Class.forName(JSch.getConfig("signature.dss"));
-      SignatureDSA dsa=(SignatureDSA)(c.newInstance());
+      SignatureDSA dsa=(SignatureDSA)(c.getDeclaredConstructor().newInstance());
       dsa.init();
 
       if(pub_array == null && P_array == null && getPublicKeyBlob()!=null){
