@@ -49,7 +49,7 @@ public abstract class KeyPairEdDSA extends KeyPair{
   void generate(int key_size) throws JSchException{
     try{
       Class<?> c=Class.forName(JSch.getConfig("keypairgen.eddsa"));
-      KeyPairGenEdDSA keypairgen=(KeyPairGenEdDSA)(c.newInstance());
+      KeyPairGenEdDSA keypairgen=(KeyPairGenEdDSA)(c.getDeclaredConstructor().newInstance());
       keypairgen.init(getJceName(), getKeySize());
       pub_array=keypairgen.getPub();
       prv_array=keypairgen.getPrv();
@@ -116,7 +116,7 @@ public abstract class KeyPairEdDSA extends KeyPair{
   public byte[] getSignature(byte[] data, String alg){
     try{
       Class<?> c=Class.forName(JSch.getConfig(alg));
-      SignatureEdDSA eddsa=(SignatureEdDSA)(c.newInstance());
+      SignatureEdDSA eddsa=(SignatureEdDSA)(c.getDeclaredConstructor().newInstance());
       eddsa.init();
       eddsa.setPrvKey(prv_array);
 
@@ -139,7 +139,7 @@ public abstract class KeyPairEdDSA extends KeyPair{
   public Signature getVerifier(String alg){
     try{
       Class<?> c=Class.forName(JSch.getConfig(alg));
-      SignatureEdDSA eddsa=(SignatureEdDSA)(c.newInstance());
+      SignatureEdDSA eddsa=(SignatureEdDSA)(c.getDeclaredConstructor().newInstance());
       eddsa.init();
 
       if(pub_array == null && getPublicKeyBlob()!=null){
