@@ -309,7 +309,7 @@ or
       byte[] key=null;
       try{
         Class<?> c=Class.forName(JSch.getConfig("pbkdf"));
-        PBKDF tmp=(PBKDF)(c.newInstance());
+        PBKDF tmp=(PBKDF)(c.getDeclaredConstructor().newInstance());
         key = tmp.getKey(_passphrase, salt, iterations, cipher.getBlockSize());
       }
       catch(Exception ee){
@@ -352,7 +352,7 @@ or
         name="aes256-cbc";
       }
       Class<?> c=Class.forName(JSch.getConfig(name));
-      cipher=(Cipher)(c.newInstance());
+      cipher=(Cipher)(c.getDeclaredConstructor().newInstance());
     }
     catch(Exception e){
       if(JSch.getLogger().isEnabled(Logger.FATAL)){
