@@ -65,7 +65,7 @@ public class KeyPairRSA extends KeyPair{
     this.key_size=key_size;
     try{
       Class<?> c=Class.forName(JSch.getConfig("keypairgen.rsa"));
-      KeyPairGenRSA keypairgen=(KeyPairGenRSA)(c.newInstance());
+      KeyPairGenRSA keypairgen=(KeyPairGenRSA)(c.getDeclaredConstructor().newInstance());
       keypairgen.init(key_size);
       pub_array=keypairgen.getE();
       prv_array=keypairgen.getD();
@@ -341,7 +341,7 @@ public class KeyPairRSA extends KeyPair{
   public byte[] getSignature(byte[] data, String alg){
     try{
       Class<?> c=Class.forName(JSch.getConfig(alg));
-      SignatureRSA rsa=(SignatureRSA)(c.newInstance());
+      SignatureRSA rsa=(SignatureRSA)(c.getDeclaredConstructor().newInstance());
       rsa.init();
       rsa.setPrvKey(prv_array, n_array);
 
@@ -364,7 +364,7 @@ public class KeyPairRSA extends KeyPair{
   public Signature getVerifier(String alg){
     try{
       Class<?> c=Class.forName(JSch.getConfig(alg));
-      SignatureRSA rsa=(SignatureRSA)(c.newInstance());
+      SignatureRSA rsa=(SignatureRSA)(c.getDeclaredConstructor().newInstance());
       rsa.init();
 
       if(pub_array == null && n_array == null && getPublicKeyBlob()!=null){
