@@ -487,7 +487,7 @@ loop:
     if(hmacsha1==null){
       try{
         Class<?> c=Class.forName(JSch.getConfig("hmac-sha1"));
-        hmacsha1=(MAC)(c.newInstance());
+        hmacsha1=(MAC)(c.getDeclaredConstructor().newInstance());
       }
       catch(Exception e){ 
         System.err.println("hmacsha1: "+e); 
