@@ -199,7 +199,7 @@ public class Session implements Runnable{
     if(random==null){
       try{
 	Class<?> c=Class.forName(getConfig("random"));
-        random=(Random)(c.newInstance());
+        random=(Random)(c.getDeclaredConstructor().newInstance());
       }
       catch(Exception e){
         throw new JSchException(e.toString(), e);
@@ -394,7 +394,7 @@ public class Session implements Runnable{
       UserAuth ua=null;
       try{
 	Class<?> c=Class.forName(getConfig("userauth.none"));
-        ua=(UserAuth)(c.newInstance());
+        ua=(UserAuth)(c.getDeclaredConstructor().newInstance());
       }
       catch(Exception e){
         throw new JSchException(e.toString(), e);
@@ -461,7 +461,7 @@ public class Session implements Runnable{
             Class<?> c=null;
             if(getConfig("userauth."+method)!=null){
               c=Class.forName(getConfig("userauth."+method));
-              ua=(UserAuth)(c.newInstance());
+              ua=(UserAuth)(c.getDeclaredConstructor().newInstance());
             }
           }
           catch(Exception e){
@@ -606,7 +606,7 @@ public class Session implements Runnable{
     KeyExchange kex=null;
     try{
       Class<?> c=Class.forName(getConfig(guess[KeyExchange.PROPOSAL_KEX_ALGS]));
-      kex=(KeyExchange)(c.newInstance());
+      kex=(KeyExchange)(c.getDeclaredConstructor().newInstance());
     }
     catch(Exception e){
       throw new JSchException(e.toString(), e);
@@ -1408,7 +1408,7 @@ key_type+" key fingerprint is "+key_fprint+".\n"+
 
       method=guess[KeyExchange.PROPOSAL_ENC_ALGS_STOC];
       c=Class.forName(getConfig(method));
-      s2ccipher=(Cipher)(c.newInstance());
+      s2ccipher=(Cipher)(c.getDeclaredConstructor().newInstance());
       while(s2ccipher.getBlockSize()>Es2c.length){
         buf.reset();
         buf.putMPInt(K);
@@ -1427,7 +1427,7 @@ key_type+" key fingerprint is "+key_fprint+".\n"+
       if(!s2ccipher.isAEAD()){
         method=guess[KeyExchange.PROPOSAL_MAC_ALGS_STOC];
         c=Class.forName(getConfig(method));
-        s2cmac=(MAC)(c.newInstance());
+        s2cmac=(MAC)(c.getDeclaredConstructor().newInstance());
         MACs2c = expandKey(buf, K, H, MACs2c, hash, s2cmac.getBlockSize());
         s2cmac.init(MACs2c);
         //mac_buf=new byte[s2cmac.getBlockSize()];
@@ -1437,7 +1437,7 @@ key_type+" key fingerprint is "+key_fprint+".\n"+
 
       method=guess[KeyExchange.PROPOSAL_ENC_ALGS_CTOS];
       c=Class.forName(getConfig(method));
-      c2scipher=(Cipher)(c.newInstance());
+      c2scipher=(Cipher)(c.getDeclaredConstructor().newInstance());
       while(c2scipher.getBlockSize()>Ec2s.length){
         buf.reset();
         buf.putMPInt(K);
@@ -1456,7 +1456,7 @@ key_type+" key fingerprint is "+key_fprint+".\n"+
       if(!c2scipher.isAEAD()){
         method=guess[KeyExchange.PROPOSAL_MAC_ALGS_CTOS];
         c=Class.forName(getConfig(method));
-        c2smac=(MAC)(c.newInstance());
+        c2smac=(MAC)(c.getDeclaredConstructor().newInstance());
         MACc2s = expandKey(buf, K, H, MACc2s, hash, c2smac.getBlockSize());
         c2smac.init(MACc2s);
       }
@@ -2508,7 +2508,7 @@ break;
          (isAuthed && method.equals("zlib@openssh.com"))){
         try{
           Class<?> c=Class.forName(foo);
-          deflater=(Compression)(c.newInstance());
+          deflater=(Compression)(c.getDeclaredConstructor().newInstance());
           int level=6;
           try{ level=Integer.parseInt(getConfig("compression_level"));}
           catch(Exception ee){ }
@@ -2535,7 +2535,7 @@ break;
          (isAuthed && method.equals("zlib@openssh.com"))){
         try{
           Class<?> c=Class.forName(foo);
-          inflater=(Compression)(c.newInstance());
+          inflater=(Compression)(c.getDeclaredConstructor().newInstance());
           inflater.init(Compression.INFLATER, 0);
         }
         catch(Exception ee){
@@ -2774,7 +2774,7 @@ break;
   static boolean checkCipher(String cipher){
     try{
       Class<?> c=Class.forName(cipher);
-      Cipher _c=(Cipher)(c.newInstance());
+      Cipher _c=(Cipher)(c.getDeclaredConstructor().newInstance());
       _c.init(Cipher.ENCRYPT_MODE,
               new byte[_c.getBlockSize()],
               new byte[_c.getIVSize()]);
@@ -2825,7 +2825,7 @@ break;
   static boolean checkMac(String mac){
     try{
       Class<?> c=Class.forName(mac);
-      MAC _c=(MAC)(c.newInstance());
+      MAC _c=(MAC)(c.getDeclaredConstructor().newInstance());
       _c.init(new byte[_c.getBlockSize()]);
       return true;
     }
@@ -2868,7 +2868,7 @@ break;
   static boolean checkKex(Session s, String kex){
     try{
       Class<?> c=Class.forName(kex);
-      KeyExchange _c=(KeyExchange)(c.newInstance());
+      KeyExchange _c=(KeyExchange)(c.getDeclaredConstructor().newInstance());
       _c.init(s ,null, null, null, null);
       return true;
     }
@@ -2889,7 +2889,7 @@ break;
     for(int i=0; i<_sigs.length; i++){
       try{
         Class<?> c=Class.forName(JSch.getConfig(_sigs[i]));
-        final Signature sig=(Signature)(c.newInstance());
+        final Signature sig=(Signature)(c.getDeclaredConstructor().newInstance());
         sig.init();
       }
       catch(Exception e){
